# storybook

./: .env.example  README.md  pyproject.toml
output/the-brave-knight-luca/: story.md
storybook/: config.py  main.py  story_generator.py
storybook/entity/: Book.py
storybook/image_generation/: local.py  remote.py
storybook/llm/: llm_story_generator.py
storybook/prompts/: prompts.py
